--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
