--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "@mui/material": "^6.1.10",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "file-saver": "^2.0.5",
     "json-server": "^1.0.0-beta.3",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
